--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Os Impossíveis!",
+  "name": "Web site do grupo Impossíveis no programa Hiring Coders",
   "icons": [
     {
       "src": "favicon.ico",
